<resources>
    <string name="app_name">Foliage Fixer</string>
    <string name="foliage_fixer">Foliage Fixer</string>
    <string name="sign_in">Sign In</string>
    <string name="create_user">Create Account</string>
    <string name="create_user_btn">Create </string>
    <string name="mail">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="title_activity_create_user">CreateUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbar_logo_description">tool desc</string>
</resources>