<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004422"
    android:scaleType="fitCenter"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"

        android:gravity="center"
        android:text="@string/foliage_fixer"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#38ffffff"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/mail"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#38ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/visibility_off_white_24dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="#00352A"
        android:elevation="15dp"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_margin="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="clip_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal"
        tools:ignore="SmallSp,TextContrastCheck" />

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_alignLeft="@id/forgotpass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:text="@string/create_user"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal"
        tools:ignore="SmallSp,TextContrastCheck" />



</RelativeLayout>