<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bl2"
    tools:context=".CreateUser">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/foliage_fixer"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createuser"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#38ffffff"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#38ffffff"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#38ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:paddingTop="10dp"
        android:text="@string/create_user_btn"
        android:textAlignment="center" />


</RelativeLayout>